--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ body {
   color: #333;
 }
 h1 {
-  font-size: bold;
+  font-weight: bold;
   font-size: 21px;
   line-height: 26px;
   color: #333;
 }
 h3 {
-  font-size: bold;
+  font-weight: bold;
   font-size: 21px;
   line-height: 21px;
   color: #333;
